--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "sweetalert2": "^11.4.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
