--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
